--- a/stemkat/style.css
+++ b/stemkat/style.css
@@ -100,3 +100,35 @@ body {
 	border: 1px solid #919191;
 	background-color: #E3E3E3;
 }
+
+/* Likert stuff */
+form .likert li {
+	display: inline-block;
+	width: 19%;
+	text-align:center;
+	vertical-align: top;
+}
+
+form .likert li input[type=radio] {
+	display:block;
+	position: relative;
+	top: 0;
+	left: 50%;
+	margin-left: -6px;
+}
+
+form .likert li label {
+	width:100%;
+	font-size: 36pt;
+}
+
+form .likert:before {
+	content: '';
+	position: relative;
+	top: 11px;
+	left: 9.5%;
+	display: block;
+	background-color: #efefef;
+	height: 4px;
+	width: 78%;
+}
